# hands-on-rust-game-development

./: .gitignore  Cargo.toml  README.md
dungeoncrawl/: .gitignore  Cargo.toml
dungeoncrawl/src/: camera.rs  turn_state.rs
dungeoncrawl/src/map_builder/: mod.rs  rooms.rs  themes.rs
dungeoncrawl/src/systems/: end_turn.rs  fov.rs  movement.rs  player_input.rs  random_move.rs
mailnewsletter/: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  configuration.yaml
mailnewsletter/.sqlx/: query-43116d4e670155129aa69a7563ddc3f7d01ef3689bb8de9ee1757b401ad95b46.json  query-4f2b43b6115affaa3efa6eca8c7c89380b2f38dd8ab55a51e44dd077a85c422e.json  query-6420cceb7cfecfaa2e26eadd92e40c8e81495e5fff915e49b5a7b540d484eeb9.json  query-653891e93cbe19f0735590000ec48df2f20382635103d2995c9053663ef50a11.json  query-88975efaba55407552ab2f47e7d8c5a9d94ff3f626e33095a20622ca635b50e9.json  query-f79f56c20023b8882c890b0427eaf5b91db182351778d01e1682499e4bea263e.json
mailnewsletter/api-test/: api-test.http
mailnewsletter/configuration/: base.yaml  production.yaml
mailnewsletter/migrations/: 20241116145449_create_subscriptions_table.sql  20241126085706_add_status_to_subscriptions.sql  20241126085759_make_status_not_null_in_subscriptions.sql  20241126085859_create_subscription_tokens_table.sql  20241129015127_create_users_table.sql  20241129022928_rename_password_column.sql  20241129051655_add_salt_to_users.sql  20241129054337_remove_salt_from_users.sql  20241201155052_seed_user.sql  20241203131419_create_idempotency_table.sql  20241203142634_relax_null_checks_on_idempotency.sql  20241204021021_create_newsletter_issues_table.sql  20241204022629_create_issue_delivery_queue_table.sql
mailnewsletter/src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
mailnewsletter/src/authentication/: middleware.rs  password.rs
mailnewsletter/src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
mailnewsletter/src/idempotency/: key.rs  mod.rs  persistence.rs
mailnewsletter/src/routes/: health_check.rs  mod.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
mailnewsletter/src/routes/admin/: dashboard.rs  logout.rs  mod.rs
mailnewsletter/src/routes/admin/newsletter/: post.rs
mailnewsletter/src/routes/admin/password/: get.rs  mod.rs  post.rs
mailnewsletter/src/routes/home/: home.html
mailnewsletter/src/routes/login/: get.rs  login.html  post.rs
mailnewsletter/tests/: health_check.rs
mailnewsletter/tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscription_confirm.rs  subscriptions.rs  subscriptions_confirm.rs
resources/: template.ron
src/: components.rs  main.rs  map.rs  map_builder.rs  player.rs  spawner.rs  turn_state.rs
src/map_builder/: automata.rs  drunkard.rs  empty.rs  mod.rs  prefab.rs  rooms.rs  themes.rs
src/spawner/: mod.rs  template.rs
src/systems/: chasing.rs  collisions.rs  combat.rs  end_turn.rs  entity_render.rs  fov.rs  hud.rs  map_render.rs  mod.rs  movement.rs  player_input.rs  random_move.rs  tooltips.rs  use_items.rs
