[package]
name = "mailnewsletter"
version = "0.1.0"
edition = "2021"

[lib]
# 这里可以使用任何类路径，遵循社区约定，可以使用name字段指定库名称
path = "src/lib.rs"

# 一个项目中只能有一个库，但可以有多个二进制文件
[[bin]]
path = "src/main.rs"
name = "mailnewsletter"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.214", features = ["derive"] }
config = "0.14.1"
uuid = { version = "1.11.0", features = ["v4"] }
chrono = "0.4.38"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.0", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.1.0"
secrecy = { version = "0.10.3", features = ["serde"] }
tracing-actix-web = "0.7.15"
serde-aux = "4.5.0"
unicode-segmentation = "1.12.0"
claim = "0.5.0"
validator = "0.16.1"
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
once_cell = "1.20.2"
fake = "~2.3.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.6.2"
serde_json = "1.0.133"
linkify = "0.10.0"

[dependencies.sqlx]
version = "0.8.2"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]